--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 title: Your awesome title
-author: GitHub User
+author: deleSerna
 email: your-email@domain.com
 description: > # this means to ignore newlines until "show_exerpts:"
   Write an awesome description for your new site here. You can edit this
@@ -12,8 +12,8 @@ show_excerpts: true # set to true to show excerpts on the homepage
 sass:
   sass_dir: _sass
 plainwhite:
-  name: Adam Denisov
-  tagline: Developer. Designer
+  name: NTV
+  tagline: Java Developer
   date_format: "%b %-d, %Y"
   sitemap: true # set to true to generate sitemap.xml content
   search: true # set to true to enable searchbar
@@ -21,9 +21,8 @@ plainwhite:
 
   # generate social links in footer
   social_links:
-    twitter: thelehhman
-    github:  thelehhman
-    linkedIn: in/thelehhman
+    github:  deleSerna
+    stackoverflow: nantitv
     rss: rss
     # dribbble: jekyll
     # flickr:   jekyll
