added stackoverflow icon

--- a/assets/font/fontello-config.json
+++ b/assets/font/fontello-config.json
@@ -107,6 +107,12 @@
       "src": "fontawesome"
     },
     {
+      "uid": "e7d17d4d07756f4ab5eb690eea1275ca",
+      "css": "stackoverflow",
+      "code": 59394,
+      "src": "zocial"
+    },
+    {
       "uid": "1f1877aff7a2cd39092fcf73c3b5e7cb",
       "css": "github-circled",
       "code": 61595,
