--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,4 @@
-title: Your awesome title
+title: La Casa de Papel
 author: deleSerna
 email: your-email@domain.com
 description: > # this means to ignore newlines until "show_exerpts:"
