--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,4 @@
-title: Pass on what you have learned
+title: Pass on what you have learned-Yoda
 author: deleSerna
 email: your-email@domain.com
 description: > # this means to ignore newlines until "show_exerpts:"
